--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "nette/forms": "^3.1",
         "latte/latte": "^2.11",
-        "nette/php-generator": "^3.6"
+        "nette/php-generator": "^3.6",
+        "tmarois/filebase": "^1.0"
     },
     "config": {
         "platform": {
