--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "nette/forms": "^3.1",
         "latte/latte": "^2.11",
         "nette/php-generator": "^3.6",
-        "tmarois/filebase": "^1.0"
+        "tmarois/filebase": "^1.0",
+        "ramsey/uuid": "^4.2"
     },
     "config": {
         "platform": {
